tests/stderr-snapshots/integration__integration__mapfiles__intrinsic_name_garbage.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: expected open parenthesis
  ┌─ <mapfile-1>:5:8
  │
5 │ 4 lmfao
  │        ^

error: missing closing parenthesis for attribute list
  ┌─ <mapfile-1>:8:10
  │
8 │ 5 CondJmp(op=">";type="int"
  │          ^ unclosed parenthesis

warning: unsupported or unknown attribute 'type' for 'Jmp'
   ┌─ <mapfile-1>:11:7
   │
11 │ 6 Jmp(type="int")
   │       ^^^^

error: missing attribute 'type' for 'CondJmp'
   ┌─ <mapfile-1>:14:3
   │
14 │ 7 CondJmp(op=">=")
   │   ^^^^^^^

error: Matching variant not found
   ┌─ <mapfile-1>:17:3
   │
17 │ 8 CondimentJmp(op=">=";type="int")
   │   ^^^^^^^^^^^^

error: unexpected token after attributes
   ┌─ <mapfile-1>:20:31
   │
20 │ 9 CondJmp(op=">=";type="int") lol
   │                               ^^^

error: expected identifier
   ┌─ <mapfile-1>:23:4
   │
23 │ 10 10()
   │    ^^

error: invalid identifier: break
   ┌─ <mapfile-1>:26:4
   │
26 │ 11 break()
   │    ^^^^^


